unpackaged/main/default/objects/Room__c/fields/ADA_Rooms__c.field-meta.xml
<CustomField>
    <fullName>ADA_Rooms__c</fullName>
    <label>ADA Rooms</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>