unpackaged/main/default/objects/Room__c/fields/Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Week__c</fullName>
    <formula>CASE(
WEEKDAY( Room_Date__c ),
1, &quot;Sunday&quot;,
2, &quot;Monday&quot;,
3, &quot;Tuesday&quot;,
4, &quot;Wednesday&quot;,
5, &quot;Thursday&quot;,
6, &quot;Friday&quot;,
&quot;Saturday&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of Week</label>
    <type>Text</type>
</CustomField>