unpackaged/main/default/objects/Room__c/fields/Meeting_Day__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meeting Day?</label>
    <type>Checkbox</type>
</CustomField>