unpackaged/main/default/objects/Room__c/fields/NCM_On_Site__c.field-meta.xml
<CustomField>
    <fullName>NCM_On_Site__c</fullName>
    <label>NCM On Site</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>