unpackaged/main/default/objects/Room__c/fields/Nightly_Total__c.field-meta.xml
<CustomField>
    <fullName>Nightly_Total__c</fullName>
    <formula>ADA_Rooms__c + NCM_On_Site__c + Premium_Rooms__c + Run_of_House__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nightly Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>