unpackaged/main/default/objects/Room__c/fields/Premium_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Premium_Rooms__c</fullName>
    <label>Premium Rooms</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>