unpackaged/main/default/objects/Room__c/fields/Room_Date__c.field-meta.xml
<CustomField>
    <fullName>Room_Date__c</fullName>
    <label>Room Date</label>
    <type>Date</type>
</CustomField>