unpackaged/main/default/objects/Room__c/fields/Run_of_House__c.field-meta.xml
<CustomField>
    <fullName>Run_of_House__c</fullName>
    <label>Run of House</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>